# openglia

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
experiments/llm_routing/: .gitignore  README.md  fastagent.config.yaml  problem.md  run.sh  setup.sh
experiments/llm_routing/environment/: ai_global_scheduler.py  run_all.sh  run_baseline.sh
experiments/llm_routing/environment/stubs/: ai_global_scheduler_stub.py
experiments/llm_routing/environment/vidur_overrides/: global_scheduler_registry.py  global_scheduler_type.py
openglia/: README.md  __init__.py
openglia/prompts/: researcher.md  supervisor.md
openglia/workflows/: __init__.py  glia.py
